fixed the grid spacing

--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -20,8 +20,8 @@
     }
 
     @include from($tablet) {
-       padding-left: 10rem;
-       min-height: 100vh;
+        padding-left: 10rem;
+        min-height: 100vh;
     }
 
     @include from($desktop) {
@@ -69,6 +69,7 @@
             }
 
             @include from($tablet) {
+
                 //hack to work around react/bulma conflicts
                 .is-outlined,
                 .is-primary {
@@ -82,6 +83,7 @@
             .button {
                 min-width: 140px;
             }
+
             .buttons {
                 width: 320px;
             }
@@ -118,13 +120,16 @@
     background-color: $white;
     position: absolute;
     left: 100px;
-    margin: 0;
+    margin: 0 0 50px 0;
 
     @include until($tablet) {
         padding-left: 5rem;
         top: 650px;
         padding: 5px;
         width: 320px;
+        .button {
+            max-width: 70px;
+        }
     }
 
     @include from($tablet) {
@@ -137,14 +142,24 @@
         padding-left: 2rem;
     }
 
-    .thumbnail {
-        margin: 10px;
+    @include until($tablet) {
+        .thumbnail {
+            margin: 20px 0 0 0;
+        }
     }
 
     @include from($tablet) {
-        .row {
+        .thumbnail {
+            margin: 0 20px 0 0;
+        }
+    }
+
+    .row {
+        margin: 0;
+        padding: 0;
+        
+        @include from($tablet) {
             width: 750px;
-            ;
         }
     }
 
